<resources>
    <string name="app_name">Pic_Chess</string>
    <string name="back_text">BACK</string>
    <string name="newgame_text">NEW</string>
    <string name="end_text">DRAW</string>
    <string name="resign_text">RESIGN</string>
    <string name="timer_on_text">^ TIMER SETTINGS</string>
    <string name="timer_off_text">> TIMER SETTINGS</string>
    <string name="empty_string_text"></string>
    <string name="hint_text_field">Hint...</string>
    <string name="toolbar_togglebutton_text">TOOL</string>
    <string name="answer_field_textfield">Enter your guess...</string>
    <string name="prompt_back_text">Are you sure want to return?</string>
    <string name="prompt_quit_text">Are you sure want to quit?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_canvas_prompt_file_name">Enter File Name</string>
    <string name="create_button_text">Create</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="mode_text">GAME MODES</string>
    <string name="drawing_description_text">Start drawing... a</string>
    <string name="time_mode_text">TIME MODES</string>
    <string name="grab_button_text">GRAB</string>
    <string name="color_button_text">COLOR</string>
    <string name="eraser_button_text">ERASER</string>
    <string name="clear_button_text">CLEAR</string>
    <string name="setting_title_text">SETTINGS</string>
    <string name="volume_text">Volume</string>
    <string name="sfx_text">SFX</string>
    <string name="timer_pvp_setting_text">PvP</string>
    <string name="timer_pvr_setting_text">PvAI</string>
    <string name="timer_chess_pic_setting_text">Chess Pictionary</string>
    <string name="timer_guess_setting_text">Guessing</string>
    <string name="apply_setting_button_text">APPLY</string>
    <string name="minute_text">min.</string>
    <string name="loading_text">Loading...</string>
    <string name="chess_text">CHESS</string>
    <string name="chesspic_text">CHESS-PIC</string>
    <string name="prompt_saving_text">Do you want to save your current canvas?</string>
    <string name="hint1">Hint: It is something that floats</string>
    <string name="hint2">Hint: You live in these</string>
    <string name="hint3">Hint: Mans best friend</string>
    <string name="hint4">Hint: You drive it</string>
    <string name="hint5">Hint: It loves mountains</string>
    <string name="hint6">Hint: It holds liquid</string>
    <string name="hint7">Hint: Moooo!</string>
    <string name="hint8">Hint: It is a mini computer!</string>
    <string name="hint9">Hint: The early ____ gets the worm!</string>
    <string name="hint10">Hint: The biggest living thing</string>
    <string name="hint11">Hint: Beep Boop Beep</string>
    <string name="hint12">Hint: Lives in the sea</string>
    <string name="hint13">Hint: Loves hopping around</string>
    <string name="hint14">Hint: Plunders, raids and sails the seven seas!</string>
    <string name="hint15">Hint: Debatably the best Mexican Food</string>
    <string name="hint16">Hint: Prickly little things</string>
    <string name="hint17">Hint: _____ Everest</string>
    <string name="hint18">Hint: Loves to drink blood</string>
    <string name="hint19">Hint: We live on it</string>
    <string name="hint20">Hint: We fly in it</string>
    <string name="hint21">Hint: A common household pet</string>
    <string name="hint22">Hint: Yo Yo is whats up!</string>
    <string name="hint23">Hint: They live in Area 51</string>
    <string name="Prompt1">Draw a Duck</string>
    <string name="Prompt2">Draw a House</string>
    <string name="Prompt3">Draw a Dog</string>
    <string name="Prompt4">Draw a Car</string>
    <string name="Prompt5">Draw a Goat</string>
    <string name="Prompt6">Draw a Cup</string>
    <string name="Prompt7">Draw a Cow</string>
    <string name="Prompt8">Draw a Phone</string>
    <string name="Prompt9">Draw a Bird</string>
    <string name="Prompt10">Draw a Whale</string>
    <string name="Prompt11">Draw a Robot</string>
    <string name="Prompt12">Draw a Fish</string>
    <string name="Prompt13">Draw a Bunny</string>
    <string name="Prompt14">Draw a Pirate</string>
    <string name="Prompt15">Draw a Taco</string>
    <string name="Prompt16">Draw a Cactus</string>
    <string name="Prompt17">Draw a Mountain</string>
    <string name="Prompt18">Draw a Bat</string>
    <string name="Prompt19">Draw the Earth</string>
    <string name="Prompt20">Draw a Plane</string>
    <string name="Prompt21">Draw a Cat</string>
    <string name="Prompt22">Draw a Yoyo</string>
    <string name="Prompt23">Draw an Alien</string>
    <string name="title_text">PIC_CHESS</string>
    <string name="grab_text">Grab</string>
    <string name="color_text">Color</string>
    <string name="eraser_text">Eraser</string>
    <string name="clear_text">Clear</string>
    <string name="new_button_text">New</string>
    <string name="return_button_text">Return</string>
    <string name="pvp_text">Player vs. Player</string>
    <string name="pvai_text">Player vs. AI</string>
    <string name="aivai_text">AI vs. AI</string>
    <string name="custom_board_text">Custom Board</string>
    <string name="drawing_text">Drawing</string>
    <string name="guessing_text">Guessing</string>
    <string name="time_description_text">Timed</string>
    <string name="unlimited_time_text">Unlimited Time</string>
    <string name="music_one_license_text">--Farm by Alexander Nakarada--\nhttps://www.serpentsoundstudios.com\nMusic promoted by https://www.chosic.com/free-music/all/\nCreative Commons CC BY 4.0\nhttps://creativecommons.org/licenses/by/4.0/</string>
    <string name="music_two_license_text">--Mozart Piano Concerto no. 21 in C major, K. 467 - II. Andante by Markus Staab--\nhttps://musopen.org/music/2635-piano-concerto-no-21-in-c-major-k-467/\nAttribution 3.0 Unported (CC BY 3.0)\nhttps://creativecommons.org/licenses/by/3.0/\nMusic promoted on https://www.chosic.com/free-music/all/</string>
    <string name="music_three_license_text">--Morning Routine by Ghostrifter Official--\nhttps://soundcloud.com/ghostrifter-official\nMusic promoted by https://www.chosic.com/free-music/all/\nCreative Commons CC BY-SA 3.0\nhttps://creativecommons.org/licenses/by-sa/3.0/</string>
    <string name="music_title_text">MUSIC</string>
</resources>