<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newCnavasPromptLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@color/black"
    tools:context=".NewCanvasPromptFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/promptTitleNCF"
        android:layout_width="373dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:text="Create New File..."
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/fileNameTextFieldNCF"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="52dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/new_canvas_prompt_file_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/createButtonNCF"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="100dp"
        android:background="@color/black"
        android:elegantTextHeight="true"
        android:text="@string/create_button_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/cancelButtonNCF"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="100dp"
        android:background="@color/black"
        android:elegantTextHeight="true"
        android:text="@string/cancel_button_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp" />
</RelativeLayout>